--- a/src/components/MarkdownRenderer/styles/markdown.css
+++ b/src/components/MarkdownRenderer/styles/markdown.css
@@ -28,7 +28,7 @@
   }
 
   a {
-    @apply text-teal-600 underline;
+    @apply text-teal-600 underline whitespace-break-spaces;
   }
 
   table {
